src/objects/CQT_Taster__c.object
<CustomObject>
    <description>Coffee Quality Toolkit - Conected coffee producers</description>
    <fields>
        <fullName>eMail__c</fullName>
        <label>eMail</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>firstName__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>lastName__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>phoneNumber__c</fullName>
        <label>Phone Number</label>
        <type>Phone</type>
    </fields>
    <label>CQT_Taster</label>
    <nameField>
        <label>CQT_Taster National ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CQT_Tasters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>